--- a/index.html
+++ b/index.html
@@ -57,10 +57,118 @@
           </div>
           <div class="header-gray-bg header-name flex items-center rounded-md">
             <p>Davii Collections</p>
-            <div class="header-green flex-center h-full">DC</div>
+            <div class="header-green text-xs flex-center h-full">DC</div>
           </div>
         </div>
       </header>
+      <div class="menu-pos alerts bg-white p-lg rounded-md">
+        <div class="flex-between">
+          <p class="text-sm font-semibold">Alerts</p>
+          <div class="flex items-center gap-md">
+            <svg
+              class="svg-outline"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+            >
+              <path
+                d="M3 6C3 5.58579 3.33579 5.25 3.75 5.25H16.25C16.6642 5.25 17 5.58579 17 6C17 6.41421 16.6642 6.75 16.25 6.75H3.75C3.33579 6.75 3 6.41421 3 6Z"
+                fill="#616161"
+              />
+              <path
+                d="M6.75 14C6.75 13.5858 7.08579 13.25 7.5 13.25H12.5C12.9142 13.25 13.25 13.5858 13.25 14C13.25 14.4142 12.9142 14.75 12.5 14.75H7.5C7.08579 14.75 6.75 14.4142 6.75 14Z"
+                fill="#616161"
+              />
+              <path
+                d="M5.5 9.25C5.08579 9.25 4.75 9.58579 4.75 10C4.75 10.4142 5.08579 10.75 5.5 10.75H14.5C14.9142 10.75 15.25 10.4142 15.25 10C15.25 9.58579 14.9142 9.25 14.5 9.25H5.5Z"
+                fill="#616161"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+            >
+              <path
+                d="M13.2803 9.03033C13.5732 8.73744 13.5732 8.26256 13.2803 7.96967C12.9874 7.67678 12.5126 7.67678 12.2197 7.96967L9.25 10.9393L8.03033 9.71967C7.73744 9.42678 7.26256 9.42678 6.96967 9.71967C6.67678 10.0126 6.67678 10.4874 6.96967 10.7803L8.71967 12.5303C9.01256 12.8232 9.48744 12.8232 9.78033 12.5303L13.2803 9.03033Z"
+                fill="#616161"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10ZM15.5 10C15.5 13.0376 13.0376 15.5 10 15.5C6.96243 15.5 4.5 13.0376 4.5 10C4.5 6.96243 6.96243 4.5 10 4.5C13.0376 4.5 15.5 6.96243 15.5 10Z"
+                fill="#616161"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="alerts-text p-lg flex-center font-semibold">
+          Alerts about your store and account will show here
+        </div>
+      </div>
+      <div class="drop-menu w-full bg-white menu-pos rounded-md">
+        <div class="menu-border drop-menu-section">
+          <div class="drop-menu-name flex-between rounded-md">
+            <div class="flex items-center gap-md">
+              <div class="header-green text-xs flex-center h-full">DC</div>
+              <p class="font-semibold">Davii Collections</p>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9" fill="none">
+              <path d="M11.3332 1L3.99984 8.33333L0.666504 5" stroke="#303030" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <svg
+              width="22"
+              height="22"
+              viewBox="0 0 21 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M13.757 3H7.24302C6.85944 3 6.4971 3.17611 6.26012 3.47772L3.87394 6.51468C3.63169 6.823 3.5 7.20375 3.5 7.59586V8.25C3.5 9.31867 4.10958 10.245 5 10.7001V15.25C5 16.2165 5.7835 17 6.75 17H14.25C15.2165 17 16 16.2165 16 15.25V10.7001C16.8904 10.245 17.5 9.31867 17.5 8.25V7.76879C17.5 7.26465 17.3307 6.77511 17.0192 6.3787L14.7399 3.47772C14.5029 3.17611 14.1406 3 13.757 3ZM13.5 15.5H14.25C14.3881 15.5 14.5 15.3881 14.5 15.25V11C13.712 11 13.0014 10.6686 12.5 10.1375C11.9986 10.6686 11.288 11 10.5 11C9.71199 11 9.00138 10.6686 8.5 10.1375C7.99862 10.6686 7.28801 11 6.5 11V15.25C6.5 15.3881 6.61193 15.5 6.75 15.5H10.5V13C10.5 12.4477 10.9477 12 11.5 12H12.5C13.0523 12 13.5 12.4477 13.5 13V15.5ZM6.5 9.5H6.25C5.55964 9.5 5 8.94036 5 8.25V7.59586C5 7.53985 5.01881 7.48545 5.05342 7.44141L7.36453 4.5H13.6355L15.8397 7.30543C15.9436 7.43757 16 7.60075 16 7.76879V8.25C16 8.94036 15.4404 9.5 14.75 9.5H14.5C13.8096 9.5 13.25 8.94036 13.25 8.25V7.75C13.25 7.33579 12.9142 7 12.5 7C12.0858 7 11.75 7.33579 11.75 7.75V8.25C11.75 8.94036 11.1904 9.5 10.5 9.5C9.80964 9.5 9.25 8.94036 9.25 8.25V7.75C9.25 7.33579 8.91421 7 8.5 7C8.08579 7 7.75 7.33579 7.75 7.75V8.25C7.75 8.94036 7.19036 9.5 6.5 9.5Z"
+                fill="#303030"
+              />
+            </svg>
+            <p>All Stores</p>
+          </div>
+        </div>
+        <div class="menu-border drop-menu-section">
+          <div class="drop-menu-item gap-md">
+            <p>Help Center</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Changelog</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Community Forums</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Hire a Shopify Partner</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Keyboard shortcuts</p>
+          </div>
+        </div>
+        <div class="drop-menu-section">
+          <div class="drop-menu-item-lg">
+            <p class="font-semibold">David Michael</p>
+            <p class="text-xs">davidmichael@gmail.com</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Manage Account</p>
+          </div>
+          <div class="drop-menu-item gap-md">
+            <p>Logout</p>
+          </div>
+        </div>
+      </div>
       <main class="w-full mx-auto">
         <div class="trial flex-between rounded-md">
           <p>Extend your trial for $1/month for 3 months on select plans.</p>
@@ -103,33 +211,65 @@
           <p class="setup-text">
             Use this personalized guide to get your store up and running.
           </p>
-          <div class="setup-range flex items-center gap-md">
+          <div class="setup-range flex items-center gap-lg">
             <p><span>1</span> / 5 completed</p>
-            <input type="range" name="progress" id="progress" />
+            <input type="range" value="20" name="progress" id="progress" />
           </div>
           <div class="setup-item-wrap">
             <div class="flex-between setup-item">
               <div>
                 <div class="flex items-center gap-md">
                   <div class="flex items-center">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="22"
-                      height="22"
-                      viewBox="0 0 32 32"
-                      fill="none"
-                    >
-                      <circle
-                        cx="16"
-                        cy="16"
-                        r="12"
-                        stroke="#8A8A8A"
-                        stroke-width="2.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-dasharray="4 6"
-                      />
-                    </svg>
+                    <div>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 32 32"
+                        fill="none"
+                      >
+                        <circle
+                          cx="16"
+                          cy="16"
+                          r="12"
+                          stroke="#8A8A8A"
+                          stroke-width="2.5"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-dasharray="4 6"
+                        />
+                      </svg>
+                      <svg
+                        class="loading"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 28 28"
+                        fill="none"
+                      >
+                        <path
+                          d="M26 14C26 16.3734 25.2962 18.6935 23.9776 20.6668C22.6591 22.6402 20.7849 24.1783 18.5922 25.0866C16.3995 25.9948 13.9867 26.2324 11.6589 25.7694C9.33114 25.3064 7.19295 24.1635 5.51472 22.4853C3.83649 20.8071 2.6936 18.6689 2.23058 16.3411C1.76755 14.0133 2.00519 11.6005 2.91345 9.4078C3.8217 7.21509 5.35977 5.34094 7.33316 4.02236C9.30655 2.70379 11.6266 2 14 2"
+                          stroke="#8A8A8A"
+                          stroke-width="2.5"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                      <svg
+                        class="complete"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <circle cx="12" cy="12" r="10" fill="#303030"></circle>
+                        <path
+                          d="M17.2738 8.52629C17.6643 8.91682 17.6643 9.54998 17.2738 9.94051L11.4405 15.7738C11.05 16.1644 10.4168 16.1644 10.0263 15.7738L7.3596 13.1072C6.96908 12.7166 6.96908 12.0835 7.3596 11.693C7.75013 11.3024 8.38329 11.3024 8.77382 11.693L10.7334 13.6525L15.8596 8.52629C16.2501 8.13577 16.8833 8.13577 17.2738 8.52629Z"
+                          fill="#fff"
+                        ></path>
+                      </svg>
+                    </div>
                   </div>
                   <p class="font-semibold">Customize your online store</p>
                 </div>
