--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <button
             aria-label="click to open menu"
             aria-haspopup="true"
-            aria-controls="menu-pop-pop"
+            aria-controls="menu-pop-up"
             id="menu-btn"
             class="header-name flex items-center rounded-md"
           >
@@ -284,8 +284,8 @@
               aria-label="Select a plan"
               href="https://shopify.com/pricing"
               target="_blank"
-              class="lg-hide trial-btn white-btn"
-              >Select your plan></a
+              class="lg-hide trial-btn white-btn text-black"
+              >Select your plan</a
             >
           </div>
           <div class="flex items-center gap-lg trial-action">
