--- a/index.html
+++ b/index.html
@@ -147,7 +147,12 @@
             class="header-name flex items-center rounded-md"
           >
             <p class="lg-show">Davii Collections</p>
-            <div aria-hidden="true" class="header-green text-xs flex-center h-full">DC</div>
+            <div
+              aria-hidden="true"
+              class="header-green text-xs flex-center h-full"
+            >
+              DC
+            </div>
           </button>
           <div
             tabindex="0"
@@ -318,16 +323,15 @@
           </div>
         </section>
         <section
-          tabindex="0"
           aria-label="set up guide section"
           id="set-up-wrap"
-          class="set-up rounded-md"
+          class="set-up rounded-md active"
         >
           <div class="setup-header">
             <div class="flex-between">
               <h1 class="font-semibold text-sm">Setup guide</h1>
               <button
-                aria-label="click to expand set up guide"
+                aria-label="click to collapse set up guide"
                 id="setup-control-icon"
                 class="icon"
               >
@@ -381,6 +385,7 @@
           </div>
           <div class="setup-item-wrap">
             <section
+              tabindex="0"
               aria-label="Section 1 - Customize your online store"
               id="setup-item-1"
               class="setup-item-1 flex-between setup-item active"
@@ -475,6 +480,7 @@
               </div>
             </section>
             <section
+              tabindex="0"
               aria-label="Step 2 - Add your first product"
               id="setup-item-2"
               class="setup-item-2 flex-between setup-item"
@@ -577,6 +583,7 @@
               </div>
             </section>
             <section
+              tabindex="0"
               aria-label="Step 3 - Add custom domain"
               id="setup-item-3"
               class="setup-item-3 flex-between setup-item"
@@ -668,6 +675,7 @@
               </div>
             </section>
             <section
+              tabindex="0"
               aria-label="Section 4 - Name your store"
               id="setup-item-4"
               class="setup-item-4 flex-between setup-item"
@@ -759,6 +767,7 @@
               </div>
             </section>
             <section
+              tabindex="0"
               aria-label="Section 5 - Set up a payment provider"
               id="setup-item-5"
               class="setup-item-5 flex-between setup-item"
